fix section text alignment

--- a/client/src/components/home/Home/sections/PopularCollectionsSection.scss
+++ b/client/src/components/home/Home/sections/PopularCollectionsSection.scss
@@ -1,5 +1,4 @@
 section {
-  text-align: center;
   .react-simple-parallax-bg {
     height: 550px;
   }
